<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <plurals name="plural_sites">
        <item quantity="one">%d Site</item>
        <item quantity="other">%d Sites</item>
    </plurals>
    <plurals name="plural_zones">
        <item quantity="one">%d Zone</item>
        <item quantity="other">%d Zones</item>
    </plurals>
    <string name="app_name">CAYGO</string>
    <string name="caygo">CAYGO</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="today_schedule">Today’s Schedule</string>
    <string name="title_site">Site</string>
    <string name="title_group">Group</string>
    <string name="caygo_tour">Zone Check</string>
    <string name="manager_tour">CAYGO Site Tour</string>
    <string name="chronometer_initial_format"><xliff:g id="initial-format">%s</xliff:g></string>
    <string name="hazard">Hazards</string>
    <string name="check_add_hazard">Address Hazard</string>
    <string name="add_hazard">Hazard(s) Addressed</string>
    <string name="end_tour">End Check</string>
    <string name="select_hazard">Select Hazard</string>
    <string name="frequently_used">Frequently Found Hazards</string>
    <string name="hazard_sources">Hazard Categories</string>
    <string name="hazard_category">Hazard Category</string>
    <string name="hazard_type">Hazards</string>
    <string name="source_transition">Source Transition</string>
    <string name="source_transition_title">Source Transition Title</string>
    <string name="source_transition_background">Source Transition BackGround</string>
    <string name="title_activity_manager_tour">ManagerTourActivity</string>
    <string name="zone">Zones</string>
    <string name="manager_end_tour">End Tour</string>
    <string name="image_content">image content</string>
    <string name="hazard_boxes">Hazard Boxes</string>
    <string name="continue_on">Continue</string>
    <string name="email_place_holder">myname@mycompany.com</string>
    <string name="sea">Sea</string>
    <string name="change">Change</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="button_continue">continue</string>
    <string name="mail_sent">Email sent</string>
    <string name="name_sub">. Please check your inbox and click on the link provided. \n\n It may take a few minutes for this email to arrive. Remember to check your spam or junk folders.</string>
    <string name="name_start">An email has been sent to you at</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_new_password">Enter a new password</string>
    <string name="email_instruction">Enter your email and we’ll send you instructions.</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="title_activity_caygo_home">CaygoHomeActivity</string>
    <string name="title_next_check">Next Zone Checks</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="toggle_flash">Flash</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="title_activity_qrcode_capture">QRCodeCaptureActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="close_button">Close</string>
    <string name="message_write_error">Error Writing Message !</string>
    <string name="message_write_success">Successfully written to Tag !</string>
    <string name="message_write_progress">Writing to Tag..</string>
    <string name="message_tag_detected">NFC Tag Detected !</string>
    <string name="message_read_tag">Tap NFC Tag Now to Read</string>
    <string name="message_write_tag">Write to NFC Tag</string>
    <string name="message_start_tag">Tap NFC Tag to Start</string>
    <string name="message_end_tag">Tap NFC Tag to End</string>
    <string name="no_schedule_zones">There are currently no zones available for your site. \n\nPlease contact SeaChange to have zones added. </string>
    <string name="message_tap_tag">The tag may not be writable or it may be damaged. Please try another tag.</string>
    <string name="hint_message">Message</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable Scan QRCode</string>
    <string name="pref_description_social_recommendations">Scan QRCode to start and end check and tour
    </string>
    <string name="pref_title_passcode">Enable Passcode</string>
    <string name="pref_description_passcode">Enable Passcode to start check</string>
    <string name="pref_title_offline">Enable Offline</string>
    <string name="pref_description_offline">Enable Offline Mode</string>
    <string name="pref_title_dev">Dev</string>
    <string name="pref_description_dev">Dev Environment</string>
    <string name="pref_nfc">Enable NFC</string>
    <string name="pref_description_nfc">Enable NFC Scan</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_ramain">RAMainActivity</string>
    <string name="title_activity_rahazards">RAHazardsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="noscheduletoday">There is no schedule yet for today.</string>
    <string name="noscheduleyet">There is no schedule yet.</string>
    <string name="check_hazard_no_data">We\'re sorry. Currently you can only view Zone Check information for Zone Checks completed since Sat, 25 Aug 2018.\n\nWe will soon make the information from this Zone Check available. In the mean time, If you need this information please contact Emmet at emmet.donnelly@seachange-intl.com or 086 192 1957.</string>
    <string name="no_more_schedule_checks">There are no more Zone Checks scheduled for today.</string>
    <string name="caygo_home_not_started_yet">Zone Checks start today in:</string>
    <string name="caygo_home_no_data_found">We could not retrieve today’s schedule from the cloud. \n\nPlease ensure you have a good internet connection and pull down on the screen to try again. </string>
    <string name="caygo_home_no_data_returned">There is no schedule for today. We connected to the cloud okay but there is no data. \n\nPlease contact SeaChange to schedule Zone Checks.</string>
    <string name="zero_checks">0 Zones Checked</string>
    <string name="hazards_addressed">Hazards Addressed</string>
    <string name="started">Started</string>
    <string name="completed">Completed</string>
    <string name="duration">Duration</string>
    <string name="zone_check">Zone Check</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="caygo_manager">CAYGO Manager</string>
    <string name="caygo_champion">CAYGO Champion</string>
    <string name="temp_passcode">Temporay Passcode</string>
    <string name="edit_user">Edit User</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_compliance">Check Compliance</string>
    <string name="tour_hazards">Tour Hazards</string>
    <string name="there_is_no_schedule_yet_for_today">There is no schedule yet for today.</string>
    <string name="site_tour">Site Tour</string>
    <string name="default_time">00:00</string>
    <string name="default_offline_text">Working Offline. 0 Checks | 0 Tour</string>
    <string name="syncing">Syncing</string>
    <string name="add_user">Add User</string>
    <string name="site_dashboard">Site Dashboard</string>
    <string name="group_dashboard">Group Dashboard</string>
    <string name="site_tours">Site Tours</string>
    <string name="scheduled_tours">Scheduled Tours</string>
    <string name="completed_tours">Completed Tours</string>
    <string name="tour_compliance">Tour Compliance</string>
    <string name="zone_checks">Zone Checks</string>
    <string name="scheduled_checks">Scheduled Checks</string>
    <string name="manage_users">Manage Users</string>
    <string name="welcome_to_caygo">Welcome to CAYGO</string>
    <string name="to_begin_we_need_to_setup_your_site">To begin we need to setup your site</string>
    <string name="this_will_take_just_few_minutes">This will take just few minutes</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="logout">Logout</string>
    <string name="let_s_setup_the_nfc_tags_for_your_site_s_zones">Let\'s setup the NFC tags for your site\'s zones</string>
    <string name="you_will_need">You will need</string>
    <string name="rewritable_nfc_tags">rewritable NFC tags</string>
    <string name="i_have_my_nfc_tags">I Have My NFC Tags</string>
    <string name="check_list">Check list</string>
    <string name="app_version">App Version</string>
    <string name="schedule_zones">Schedule Zones</string>
    <string name="read_nfc_tag">Read NFC Tag</string>
    <string name="nfc_tag_setup">NFC Tag Setup</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="check_list_templates">Checklist Templates</string>
</resources>