<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">

    <RelativeLayout
        android:id="@+id/source_box_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sourceGrey">

        <View
            android:id="@+id/source_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transitionName="@string/source_transition_background" />

        <View
            android:id="@+id/source_front_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sourceGrey"
            android:transitionName="@string/source_transition" />

        <TextView
            android:id="@+id/source_vertical_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/text_margin"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:letterSpacing=".05"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/sysWhite"
            android:textSize="16dp"
            android:transitionName="@string/source_transition_title" />
    </RelativeLayout>

</RelativeLayout>